Updated with unit tests for playerservice and roomservice. Roomservice tests incomplete
