# mastermind/src/main/java/com/jl/mastermind/dto/PlayerGuessDTO.java
@@ -1,0 +1,14 @@
+package com.jl.mastermind.dto;
+
+import jakarta.validation.constraints.NotNull;
+import lombok.Data;
+
+@Data
+public class PlayerGuessDTO {
+    @NotNull
+    private String playerGuess;
+
+    public PlayerGuessDTO(String playerGuess) {
+        this.playerGuess = playerGuess;
+    }
+}
